# DestinatiiTuristice

Ex_destinatiiTuristice/: CMakeLists.txt  entitati.txt  main.cpp
Ex_destinatiiTuristice/entitate/: Entitate.cpp  Entitate.h
Ex_destinatiiTuristice/exceptii/: ExceptieCustomNumber.cpp  ExceptieCustomNumber.h  ExceptieGenerala.cpp  ExceptieGenerala.h  Validator.cpp  Validator.h
Ex_destinatiiTuristice/repo/: FileRepository.cpp  FileRepository.h  Repository.cpp  Repository.h
Ex_destinatiiTuristice/service/: Service.cpp  Service.h
Ex_destinatiiTuristice/teste/: Teste.cpp  Teste.h
Ex_destinatiiTuristice/ui/: Ui.cpp  Ui.h
